--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="textPrimary">#212121</color>
     <color name="textSecondary">#757575</color>
     <color name="hintColor">#BDBDBD</color>
-    <color name="linkColor">#1E88E5</color>
+    <color name="linkColor">#000852</color>
 
     <!-- Primary Colors -->
     <color name="primaryColor">#22B04C</color>
